--- a/gb/19/12/8/n11708871.md
+++ b/gb/19/12/8/n11708871.md
@@ -1,69 +1,74 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/rywys229/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/rywys229/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>±»ÆØÊÇÀÖÊÓÍøºóÌ¨ÀÏ°å ÀîÔ´³±ÇúÏß±ÙÒ¥£¿</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2013/03/1303142124402039-600x400.jpg" />
-<h6>ÖÐ¹²¹ú¼Ò¸±Ö÷Ï¯ÀîÔ´³±£¨Í¼£©µÄ³óÎÅÔÙÆð£¬Ëû±»ÆØÊÇÀÖÊÓÍøµÄºóÌ¨ÀÏ°å¡£(Getty Images) 
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è¢«æ›æ˜¯ä¹è§†ç½‘åŽå°è€æ¿ æŽæºæ½®æ›²çº¿è¾Ÿè°£ï¼Ÿ</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/03/1303142124402039-600x400.jpg" />
+<h6>ä¸­å…±å›½å®¶å‰¯ä¸»å¸­æŽæºæ½®ï¼ˆå›¾ï¼‰çš„ä¸‘é—»å†èµ·ï¼Œä»–è¢«æ›æ˜¯ä¹è§†ç½‘çš„åŽå°è€æ¿ã€‚(Getty Images) 
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ08ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÕÅ¶Ù±¨µ¼£©ÖÐ¹²Ç°¹ú¼Ò¸±Ö÷Ï¯<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E6%9D%8E%E6%BA%90%E6%BD%AE.md">ÀîÔ´³±</a>£¬±»ÆØÊÇÀÖÊÓÍøµÄºóÌ¨£¬Ôø±»±ÆÍËµ½Ïã¸ÛµÈÏûÏ¢ºó£¬ÀîÔ´³±ÒÉÍ¨¹ýÇ×¹²¸ÛÃ½<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E8%BE%9F%E8%B0%A3.md">±ÙÒ¥</a>¡£</p>
-<h2><strong><a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E6%9D%8E%E6%BA%90%E6%BD%AE.md">ÀîÔ´³±</a>±»ÆØÊÇÀÖÊÓÍøºóÌ¨ÀÏ°å</strong></h2>
-<p>ÃÀ¹ú¡¶»ªÊ¢¶ÙÊ±±¨¡·12ÔÂ6ÈÕ±¨µ¼£¬<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md">ÖÐ¹²¼äµý</a><a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md">ÍõÁ¢Ç¿</a>Ïò°ÄÖÞÕþ¸®Í¶³Ïºó£¬Ïò°ÄÖÞµ±¾ÖÌá¹©Çé±¨°üÀ¨ÀîÔ´³±¡£ÍõÁ¢Ç¿¸æËß°ÄÖÞµ±¾Ö£¬ÖÐ¹²¾üÊÂÇé±¨Õ½ÏßÖ®Ò»£¬ÊÇÍ¨¹ýÔÚÏã¸ÛÉÏÊÐµÄÆóÒµ¡°ÖÐ¹úÇ÷ÊÆ¿Ø¹ÉÓÐÏÞ¹«Ë¾¡±£¬¼àÊÓÄÇÐ©ÔÚÖÐ¹²ÄÚ²¿¶·ÕùÖÐÊ§°ÜºóÌÓÍùÏã¸ÛµÄÖÐ¹²¹ÙÔ±¡£</p>
-<p>ÔÚ2013ÖÁ2018Äêµ£ÈÎÖÐ¹²¹ú¼Ò¸±Ö÷Ï¯µÄÀîÔ´³±ÔÚÄÚ¶·ÖÐÊ§ÊÆºó£¬Ôø¡°±»ÆÈ³·ÍË¡±µ½Ïã¸Û¡£°üÀ¨<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md">ÍõÁ¢Ç¿</a>ÔÚÄÚµÄ¶à¸öÖÐ¹²Çé±¨ÈËÔ±ÔøÊÔÍ¼ÏòÀîÔ´³±Ê©Ñ¹£¬ÒªÇóËû·µ»Ø´óÂ½½ÓÊÜµ÷²é¡£</p>
-<p>ÍõÁ¢Ç¿±íÊ¾£¬ËûÔøÓëÆäËû¼¸ÃûÖÐ¹²Çé±¨ÈËÔ±Ò»Æð£¬ÔÚÏã¸ÛÏã¸ñÀïÀ­´ó¾ÆµêÓëÀîÔ´³±µÄÇ×ÓÑ»áÎî¡£ËûÃÇÍþÐ²ÀîÔ´³±µÄÆÞ×Ó£¬²¢Ëø¶¨ÁË¡°ÀîÔ´³±ÓµÓÐµÄÀÖÊÓÍø¡±¡£</p>
-<p>ÀÖÊÓÍøÊÇÖÐ¹ú´óÂ½Î¨Ò»Ò»¼ÒÔÚ¾³ÄÚÉÏÊÐµÄÊÓÆµÍøÕ¾£¬Ò²ÊÇÈ«ÇòÊ×¼ÒÒÔÊ×´Î¹«¿ªÄ¼¹É£¨IPO£©·½Ê½ÉÏÊÐµÄÊÓÆµÍøÕ¾¡£´´°ìÈËÊÇÖÐ¹úÉÌÈË¼ÖÔ¾Í¤¡£</p>
-<p>ÀÖÊÓÍø½ñÄê4ÔÂÒÑÔâ±±¾©µ±¾Öµ÷²é£¬Ä¿Ç°ÏÝÈë²ÆÎñÎ£»ú¡£¼ÖÔ¾Í¤½ñÄê10ÔÂ13ÈÕÔÚÃÀ¹úÒÑÖ÷¶¯Ìá³öÁËÆÆ²úÖØ×éµÄÉêÇë¡£</p>
-<p>ÍõÁ¢Ç¿Ö¸£¬ÀÖÊÓÍøµÄÎ£»ú´ÓÀ´²»ÊÇÍâ½çÒÔÎªµÄ½ðÈÚÎ£»ú£¬¶øÊÇÒ»³¡ÕþÖÎÎ£»ú¡£ËûËµ£º¡°ÕýÊÇÖÐ¹²ÄÚ²¿ÅÉÏµ¶·Õùµ¼ÖÂÕâ¼ÒÆóÒµµ¹±Õ¡±¡£</p>
-<h2><strong>ÀîÔ´³±ÒÉ<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E8%BE%9F%E8%B0%A3.md">±ÙÒ¥</a></strong></h2>
-<p>¸ÃÏûÏ¢¼ûÖî±¨¶Ëºó£¬µÚ¶þÌì£¬ÀîÔ´³±ÒÉÍ¨¹ýÇ×¹²¸ÛÃ½±ÙÒ¥¡£</p>
-<p>¡¶ÐÇµºÈÕ±¨¡·12ÔÂ7ÈÕ±¨µ¼³Æ£¬Ò»¶ÎÀîÔ´³±ÓëÍ¬Ñ§¾Û»áµÄÊÓÆµ×î½üÆØ¹â£¬Ëû¸ÐÌ¾¡°ÏÖÔÚÔìÎÒÒ¥µÄ¶«Î÷ºÜ¶àÀ²£¬&#8230;&#8230;£¬ËùÒÔÎÒ¶¼ÀÁµÃÈ¥±ÙÒ¥¡±¡£</p>
-<p>ÀîÔ´³±×Ô³°µ½£º¡°Ë­½ÐÄã×öÁË×éÖ¯²¿³¤£¬Äã×ö×éÖ¯²¿³¤²»µÃ×ïÈË°¡£¿ÄãÌá°ÎÈË£¬ÈË¼ÒÍ¦¸ßÐË£»Äã²»Ìá°ÎÈË£¬ÈË¼Ò²»ºÞÄãÄÅ£¡µÃ×ïÈËºÜ¶àµÄ¡£¡±</p>
-<p>ÀîÔ´³±2007ÄêÖÁ2012ÄêÈÎÖÐ¹²ÕþÖÎ¾ÖÎ¯Ô±¡¢ÖÐ×é²¿²¿³¤¡¢ÖÐÑëÊé¼Ç´¦Êé¼Ç¡£</p>
-<p>Ê±ÕþÆÀÂÛÔ±ÀîÁÖÒ»¶Ô´ó¼ÍÔª¼ÇÕß±íÊ¾£¬ÀîÔ´³±ÏÖÔÚÍ¨¹ýÇ×¹²¸ÛÃ½±ÙÒ¥£¬ÕýºÃËµÃ÷ÁËÆäÏÂÌ¨ÊÇÒòÎªÄÚ²¿¶·Õù¡£</p>
-<h2><strong>ÀîÔ´³±ÄÚ¶·ÖÐÂä°Ü</strong></h2>
-<p>ÀîÔ´³±ÕþÖÎ±³¾°¸´ÔÓ£¬ºá¿çÍÅÅÉ¡¢½­ÅÉ¡¢Ì«×Óµ³µÈ¶àÖØÉí·Ý¡£ÀîÔ´³±Óë½­ÔóÃñ¶¼ÊÇ½­ËÕÈË£¬Ëû¸¸Ç×Àî¸É³ÉÓë½­ÔóÃñµÄÊåÊå½­ÉÏÇà¹ØÏµÃÜÇÐ¡£</p>
-<p>½­ÔóÃñÊ±ÆÚ£¬ÀîÔ´³±ÏÈºó±»Ìá°ÎÎªÖÐ¹²ÎÄ»¯²¿¸±²¿³¤£¬½­ËÕÊ¡Î¯¸±Êé¼Ç£¬½­ËÕÊ¡Î¯¸±Êé¼Ç¡¢ÄÏ¾©ÊÐÎ¯Êé¼Ç¡£ÀîÔ´³±ÔÚ£¬ÀîÔøÖ÷Õþ½­ÔóÃñÀÏ¼Ò½­ËÕÊ¡¶àÄê</p>
-<p>2003ÄêÖÁ2007Äê£¬ÀîÔ´³±³öÈÎ½­ËÕÊ¡Î¯Êé¼Ç£¬Ö÷Õþ½­ÔóÃñÀÏ¼Ò½­ËÕÊ¡£»2007ÄêµÄÖÐ¹²Ê®Æß´óÉÏÉýÈÎÕþÖÎ¾ÖÎ¯Ô±¡£</p>
-<p>ÖÐ¹²Ê®°Ë´óÇ°£¬½­ÅÉÕë¶ÔÏ°½üÆ½µÄÕþ±äÒõÄ±ÆØ¹â£¬Ëæºó£¬ÕþÖÎ¾ÖÎ¯Ô±±¡ÎõÀ´¡¢ÖÜÓÀ¿µ¡¢Ðì²ÅºñµÈ¶àÃû½­ÅÉ´óÔ±ÏÈºóÂäÂí¡£Óë±¡ÎõÀ´¡¢ÖÜÓÀ¿µ½á³ÉÕþÖÎÍ¬ÃËµÄÁî¼Æ»®£¬ÏÈ±»µ÷ÀëÖÐ°ì£¬ËæºóÒ²±»²é¡£</p>
-<p>Í¬Ê±£¬ÀîÔ´³±µÄ¶àÃû¾É²¿Ò²±»²é£¬°üÀ¨ËûµÄÁ½ÃûÇ°´óÃØ£º½­ËÕÊ¡¸±Ê¡³¤ÀîÔÆ·å¡¢Ê¡Î¯ÃØÊé³¤ÕÔÉÙ÷ëµÈ¡£</p>
-<p>ÀîÔ´³±±»Ö¸ÉæÏÓÓëÖÐ°ìÇ°Ö÷ÈÎÁî¼Æ»®¸ã¡°ÍÅÍÅ»ï»ï¡±£¬ÉõÖÁÃ½Ìå´«³ö¡°ÁîÀîÌåÖÆ¡±µÈµÄËµ·¨¡£Ëû»¹±»Ö¸Ó¦¶ÔÆäÖ÷Õþ¹ýµÄ½­ËÕ¹Ù³¡µÄ¸¯°Ü¸ºÔðµÈ¡£Òò´ËÔÚ2017ÄêµÄÖÐ¹²Ê®¾ÅÇ°£¬Ã½Ìå²»¶Ï´«³öÀîÔ´³±¿ÉÄÜÒªÂäÂíµÄÏûÏ¢¡£</p>
-<p>ÖÐ¹²Ê®¾Å´óÉÏ£¬Ê±ÈÎÖÐ¹²ÕþÖÎ¾ÖÎ¯Ô±µÄÀîÔ´³±¡°ÂäÑ¡¡±ÖÐÑëÎ¯Ô±£¬²¢ÔÚ2018ÄêµÄÖÐ¹²Á½»áÉÏ¡°ÂãÍË¡±£¬¶øµ±Ê±ÀîÔ´³±¸ù±¾Ã»µ½68Ëê¡°ÏÂ¡±µÄÄêÁä¡£</p>
-<p>ÔðÈÎ±à¼­£º¸ß¾²</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ08æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¼ é¡¿æŠ¥å¯¼ï¼‰ä¸­å…±å‰å›½å®¶å‰¯ä¸»å¸­<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%BA%90%E6%BD%AE.md#1">æŽæºæ½®</a>ï¼Œè¢«æ›æ˜¯ä¹è§†ç½‘çš„åŽå°ï¼Œæ›¾è¢«é€¼é€€åˆ°é¦™æ¸¯ç­‰æ¶ˆæ¯åŽï¼ŒæŽæºæ½®ç–‘é€šè¿‡äº²å…±æ¸¯åª’<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%9F%E8%B0%A3.md#1">è¾Ÿè°£</a>ã€‚</p>
+<h2><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%BA%90%E6%BD%AE.md#1">æŽæºæ½®</a>è¢«æ›æ˜¯ä¹è§†ç½‘åŽå°è€æ¿</strong></h2>
+<p>ç¾Žå›½ã€ŠåŽç››é¡¿æ—¶æŠ¥ã€‹12æœˆ6æ—¥æŠ¥å¯¼ï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">ä¸­å…±é—´è°</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md#1">çŽ‹ç«‹å¼º</a>å‘æ¾³æ´²æ”¿åºœæŠ•è¯šåŽï¼Œå‘æ¾³æ´²å½“å±€æä¾›æƒ…æŠ¥åŒ…æ‹¬æŽæºæ½®ã€‚çŽ‹ç«‹å¼ºå‘Šè¯‰æ¾³æ´²å½“å±€ï¼Œä¸­å…±å†›äº‹æƒ…æŠ¥æˆ˜çº¿ä¹‹ä¸€ï¼Œæ˜¯é€šè¿‡åœ¨é¦™æ¸¯ä¸Šå¸‚çš„ä¼ä¸šâ€œä¸­å›½è¶‹åŠ¿æŽ§è‚¡æœ‰é™å…¬å¸â€ï¼Œç›‘è§†é‚£äº›åœ¨ä¸­å…±å†…éƒ¨æ–—äº‰ä¸­å¤±è´¥åŽé€ƒå¾€é¦™æ¸¯çš„ä¸­å…±å®˜å‘˜ã€‚</p>
+<p>åœ¨2013è‡³2018å¹´æ‹…ä»»ä¸­å…±å›½å®¶å‰¯ä¸»å¸­çš„æŽæºæ½®åœ¨å†…æ–—ä¸­å¤±åŠ¿åŽï¼Œæ›¾â€œè¢«è¿«æ’¤é€€â€åˆ°é¦™æ¸¯ã€‚åŒ…æ‹¬<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E7%AB%8B%E5%BC%BA.md#1">çŽ‹ç«‹å¼º</a>åœ¨å†…çš„å¤šä¸ªä¸­å…±æƒ…æŠ¥äººå‘˜æ›¾è¯•å›¾å‘æŽæºæ½®æ–½åŽ‹ï¼Œè¦æ±‚ä»–è¿”å›žå¤§é™†æŽ¥å—è°ƒæŸ¥ã€‚</p>
+<p>çŽ‹ç«‹å¼ºè¡¨ç¤ºï¼Œä»–æ›¾ä¸Žå…¶ä»–å‡ åä¸­å…±æƒ…æŠ¥äººå‘˜ä¸€èµ·ï¼Œåœ¨é¦™æ¸¯é¦™æ ¼é‡Œæ‹‰å¤§é…’åº—ä¸ŽæŽæºæ½®çš„äº²å‹ä¼šæ™¤ã€‚ä»–ä»¬å¨èƒæŽæºæ½®çš„å¦»å­ï¼Œå¹¶é”å®šäº†â€œæŽæºæ½®æ‹¥æœ‰çš„ä¹è§†ç½‘â€ã€‚</p>
+<p>ä¹è§†ç½‘æ˜¯ä¸­å›½å¤§é™†å”¯ä¸€ä¸€å®¶åœ¨å¢ƒå†…ä¸Šå¸‚çš„è§†é¢‘ç½‘ç«™ï¼Œä¹Ÿæ˜¯å…¨çƒé¦–å®¶ä»¥é¦–æ¬¡å…¬å¼€å‹Ÿè‚¡ï¼ˆIPOï¼‰æ–¹å¼ä¸Šå¸‚çš„è§†é¢‘ç½‘ç«™ã€‚åˆ›åŠžäººæ˜¯ä¸­å›½å•†äººè´¾è·ƒäº­ã€‚</p>
+<p>ä¹è§†ç½‘ä»Šå¹´4æœˆå·²é­åŒ—äº¬å½“å±€è°ƒæŸ¥ï¼Œç›®å‰é™·å…¥è´¢åŠ¡å±æœºã€‚è´¾è·ƒäº­ä»Šå¹´10æœˆ13æ—¥åœ¨ç¾Žå›½å·²ä¸»åŠ¨æå‡ºäº†ç ´äº§é‡ç»„çš„ç”³è¯·ã€‚</p>
+<p>çŽ‹ç«‹å¼ºæŒ‡ï¼Œä¹è§†ç½‘çš„å±æœºä»Žæ¥ä¸æ˜¯å¤–ç•Œä»¥ä¸ºçš„é‡‘èžå±æœºï¼Œè€Œæ˜¯ä¸€åœºæ”¿æ²»å±æœºã€‚ä»–è¯´ï¼šâ€œæ­£æ˜¯ä¸­å…±å†…éƒ¨æ´¾ç³»æ–—äº‰å¯¼è‡´è¿™å®¶ä¼ä¸šå€’é—­â€ã€‚</p>
+<h2><strong>æŽæºæ½®ç–‘<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%9F%E8%B0%A3.md#1">è¾Ÿè°£</a></strong></h2>
+<p>è¯¥æ¶ˆæ¯è§è¯¸æŠ¥ç«¯åŽï¼Œç¬¬äºŒå¤©ï¼ŒæŽæºæ½®ç–‘é€šè¿‡äº²å…±æ¸¯åª’è¾Ÿè°£ã€‚</p>
+<p>ã€Šæ˜Ÿå²›æ—¥æŠ¥ã€‹12æœˆ7æ—¥æŠ¥å¯¼ç§°ï¼Œä¸€æ®µæŽæºæ½®ä¸ŽåŒå­¦èšä¼šçš„è§†é¢‘æœ€è¿‘æ›å…‰ï¼Œä»–æ„Ÿå¹â€œçŽ°åœ¨é€ æˆ‘è°£çš„ä¸œè¥¿å¾ˆå¤šå•¦ï¼Œ&#8230;&#8230;ï¼Œæ‰€ä»¥æˆ‘éƒ½æ‡’å¾—åŽ»è¾Ÿè°£â€ã€‚</p>
+<p>æŽæºæ½®è‡ªå˜²åˆ°ï¼šâ€œè°å«ä½ åšäº†ç»„ç»‡éƒ¨é•¿ï¼Œä½ åšç»„ç»‡éƒ¨é•¿ä¸å¾—ç½ªäººå•Šï¼Ÿä½ ææ‹”äººï¼Œäººå®¶æŒºé«˜å…´ï¼›ä½ ä¸ææ‹”äººï¼Œäººå®¶ä¸æ¨ä½ å‘ï¼å¾—ç½ªäººå¾ˆå¤šçš„ã€‚â€</p>
+<p>æŽæºæ½®2007å¹´è‡³2012å¹´ä»»ä¸­å…±æ”¿æ²»å±€å§”å‘˜ã€ä¸­ç»„éƒ¨éƒ¨é•¿ã€ä¸­å¤®ä¹¦è®°å¤„ä¹¦è®°ã€‚</p>
+<p>æ—¶æ”¿è¯„è®ºå‘˜æŽæž—ä¸€å¯¹å¤§çºªå…ƒè®°è€…è¡¨ç¤ºï¼ŒæŽæºæ½®çŽ°åœ¨é€šè¿‡äº²å…±æ¸¯åª’è¾Ÿè°£ï¼Œæ­£å¥½è¯´æ˜Žäº†å…¶ä¸‹å°æ˜¯å› ä¸ºå†…éƒ¨æ–—äº‰ã€‚</p>
+<h2><strong>æŽæºæ½®å†…æ–—ä¸­è½è´¥</strong></h2>
+<p>æŽæºæ½®æ”¿æ²»èƒŒæ™¯å¤æ‚ï¼Œæ¨ªè·¨å›¢æ´¾ã€æ±Ÿæ´¾ã€å¤ªå­å…šç­‰å¤šé‡èº«ä»½ã€‚æŽæºæ½®ä¸Žæ±Ÿæ³½æ°‘éƒ½æ˜¯æ±Ÿè‹äººï¼Œä»–çˆ¶äº²æŽå¹²æˆä¸Žæ±Ÿæ³½æ°‘çš„å”å”æ±Ÿä¸Šé’å…³ç³»å¯†åˆ‡ã€‚</p>
+<p>æ±Ÿæ³½æ°‘æ—¶æœŸï¼ŒæŽæºæ½®å…ˆåŽè¢«ææ‹”ä¸ºä¸­å…±æ–‡åŒ–éƒ¨å‰¯éƒ¨é•¿ï¼Œæ±Ÿè‹çœå§”å‰¯ä¹¦è®°ï¼Œæ±Ÿè‹çœå§”å‰¯ä¹¦è®°ã€å—äº¬å¸‚å§”ä¹¦è®°ã€‚</p>
+<p>2003å¹´è‡³2007å¹´ï¼ŒæŽæºæ½®å‡ºä»»æ±Ÿè‹çœå§”ä¹¦è®°ï¼Œä¸»æ”¿æ±Ÿæ³½æ°‘è€å®¶æ±Ÿè‹çœï¼›2007å¹´çš„ä¸­å…±åä¸ƒå¤§ä¸Šå‡ä»»æ”¿æ²»å±€å§”å‘˜ã€‚</p>
+<p>ä¸­å…±åå…«å¤§å‰ï¼Œæ±Ÿæ´¾é’ˆå¯¹ä¹ è¿‘å¹³çš„æ”¿å˜é˜´è°‹æ›å…‰ï¼ŒéšåŽï¼Œè–„ç†™æ¥ã€å‘¨æ°¸åº·ã€å¾æ‰åŽšç­‰å¤šåæ±Ÿæ´¾å¤§å‘˜å…ˆåŽè½é©¬ã€‚ä¸Žè–„ç†™æ¥ã€å‘¨æ°¸åº·ç»“æˆæ”¿æ²»åŒç›Ÿçš„ä»¤è®¡åˆ’ï¼Œå…ˆè¢«è°ƒç¦»ä¸­åŠžï¼ŒéšåŽä¹Ÿè¢«æŸ¥ã€‚</p>
+<p>åŒæ—¶ï¼ŒæŽæºæ½®çš„å¤šåæ—§éƒ¨ä¹Ÿè¢«æŸ¥ï¼ŒåŒ…æ‹¬ä»–çš„ä¸¤åå‰å¤§ç§˜ï¼šæ±Ÿè‹çœå‰¯çœé•¿æŽäº‘å³°ã€çœå§”ç§˜ä¹¦é•¿èµµå°‘éºŸç­‰ã€‚</p>
+<p>æŽæºæ½®è¢«æŒ‡æ¶‰å«Œä¸Žä¸­åŠžå‰ä¸»ä»»ä»¤è®¡åˆ’æžâ€œå›¢å›¢ä¼™ä¼™â€ï¼Œç”šè‡³åª’ä½“ä¼ å‡ºâ€œä»¤æŽä½“åˆ¶â€ç­‰çš„è¯´æ³•ã€‚ä»–è¿˜è¢«æŒ‡åº”å¯¹å…¶ä¸»æ”¿è¿‡çš„æ±Ÿè‹å®˜åœºçš„è…è´¥è´Ÿè´£ç­‰ã€‚å› æ­¤åœ¨2017å¹´çš„ä¸­å…±åä¹å‰ï¼Œåª’ä½“ä¸æ–­ä¼ å‡ºæŽæºæ½®å¯èƒ½è¦è½é©¬çš„æ¶ˆæ¯ã€‚</p>
+<p>ä¸­å…±åä¹å¤§ä¸Šï¼Œæ—¶ä»»ä¸­å…±æ”¿æ²»å±€å§”å‘˜çš„æŽæºæ½®â€œè½é€‰â€ä¸­å¤®å§”å‘˜ï¼Œå¹¶åœ¨2018å¹´çš„ä¸­å…±ä¸¤ä¼šä¸Šâ€œè£¸é€€â€ï¼Œè€Œå½“æ—¶æŽæºæ½®æ ¹æœ¬æ²¡åˆ°68å²â€œä¸‹â€çš„å¹´é¾„ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šé«˜é™</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/8/n11708871.htm">±»ÆØÊÇÀÖÊÓÍøºóÌ¨ÀÏ°å ÀîÔ´³±ÇúÏß±ÙÒ¥£¿</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11562427.htm">ÀîÔ´³±ÏÖÉíÉÏº£¸´µ©´óÑ§ ±¨µÀÑ¸ËÙ±»É¾³ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/2/n10184111.htm">Á½»á¼´½«¾ÙÐÐ ´«ÀîÔ´³±»ò¡°ÂãÍË¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/2/25/n10170327.htm">ÂäÑ¡ÈË´ó´ú±í ÀîÔ´³±¡°Èý´ó½Ô¿Õ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/2/9/n10128022.htm">Ç°ÐÄ¸¹´óÃØÊÜ»ß½ü1500Íò×ï³É ÀîÔ´³±¿°ÓÇ</a></li>
-> <li><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11706111.md">ÍõÁ¢Ç¿£ºÀîÔ´³±ÉæÀÖÊÓÍø ÖÐ¹²ÇÔÃÀÎäÆ÷¼¼Êõ</a></li>
-> <li><a href="https://github.com/rywys229/djy/blob/master/gb/18/2/9/n10131011.md">ÌáÇ°³ö¾ÖµÄÈýÕþÖÎ¾ÖÎ¯Ô± ÀîÔ´³±×îÌØ±ð</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707668.htm">ÖÐ¹úÕ®ÎñÎ¥Ô¼¶ñ»¯ Ì¨11ÒøÐÐÁªºÏ´û¿îÖÐÆó²ÈÀ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707638.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©½ÓÊÜGDP±£4Õù5£¿¾­¼ÃÓÐ¶àÔã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706387.htm">¡¾Ö±²¥ÖÐ¡¿12.8¹ú¼ÊÈËÈ¨ÈÕ 80ÍòÈË´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707616.htm">Ì«Æ½ÑóÈý¹ú³öÌ¨ÐÂ´ëÊ© ·ÀÖÐ¹²¸ÉÔ¤Ñ¡¾Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693210.htm">¡°ÈýÊÀÒò¹û¡±ÉÆ¶ñÓÐ±¨ ÎªºÎÓÐÊ±¿´²»µ½¹û±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11679911.htm">ÆæÃÎÔ¤Õ×£º¸ÄÃûéóÊÂ ×ªÊÀÆæÎÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688048.htm">Ãñ¹ú¾ü·§¼ûÖ¤Ææ¼££ºÄº´ºÆíÑ© ÈËÌå×Ô»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703982.htm">¸ßÒÔÏèÔøÊÎÑÝÇòÐÇ¼ª†´ Á½ÈËÏà¸ô°ËÌìÏÈºóÀëÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706340.htm">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705859.htm">¾©¾çÑÝÔ±½ªÒàÉº×ÔçËÉíÍö ´«ÆäÕÉ·ò±»²é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707607.htm">¡¾ÈÈµã»¥¶¯¡¿×¨·ÃÉñÔÏÖ÷³ÖÈËÁÖÀíÉÆºÍÖ¸»Ó³ÂÓ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707638.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©½ÓÊÜGDP±£4Õù5£¿¾­¼ÃÓÐ¶àÔã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706002.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Ì¸ÅÐ±±¾©¶à±ä ´¨ÆÕ£º¿´Çé¿ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703982.htm">¸ßÒÔÏèÔøÊÎÑÝÇòÐÇ¼ª†´ Á½ÈËÏà¸ô°ËÌìÏÈºóÀëÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703718.htm">·¶±ù±ù¸°ÃÀÎªºÃÀ³ÎëÓ°Æ¬ÅäÒô Éí²Ä·¢¸£ÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705012.htm">YouTubeÄê¶ÈÈÈÃÅMVÅÅÐÐ ËÄ×éº«ÍÅ±íÏÖÁÁÑÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706422.htm">¸ßÒÔÏèÖèÊÅÊÂ¼þ ½ÚÄ¿·½Öí¶ÓÓÑ·¢ÎÄÈÇÅ­ÍøÓÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706258.htm">´óÏ·°æ¡¶Ô¸ÈÙ¹â¡·³öÂ¯ ´´×÷Õß£ºÒÔÔÁ¾ç¾ÛÈËÐÄ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/2/n11562427.md#1">æŽæºæ½®çŽ°èº«ä¸Šæµ·å¤æ—¦å¤§å­¦ æŠ¥é“è¿…é€Ÿè¢«åˆ é™¤</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/3/2/n10184111.md#1">ä¸¤ä¼šå³å°†ä¸¾è¡Œ ä¼ æŽæºæ½®æˆ–â€œè£¸é€€â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/25/n10170327.md#1">è½é€‰äººå¤§ä»£è¡¨ æŽæºæ½®â€œä¸‰å¤§çš†ç©ºâ€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/9/n10128022.md#1">å‰å¿ƒè…¹å¤§ç§˜å—è´¿è¿‘1500ä¸‡ç½ªæˆ æŽæºæ½®å ªå¿§</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708871.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/6/n11706111.md#1">çŽ‹ç«‹å¼ºï¼šæŽæºæ½®æ¶‰ä¹è§†ç½‘ ä¸­å…±çªƒç¾Žæ­¦å™¨æŠ€æœ¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/9/n10131011.md#1">æå‰å‡ºå±€çš„ä¸‰æ”¿æ²»å±€å§”å‘˜ æŽæºæ½®æœ€ç‰¹åˆ«</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/16/n10398402.md#1" target="_blank">æž—è¾‰ï¼šæŽ©ç›–å¤§é¥¥è’çœŸç›¸ äº”çœä¹¦è®°ç½ªè´£éš¾é€ƒï¼ˆä¸‹ï¼‰</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">å…³æ³¨3äº¿äººä¸‰é€€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">å‰å¤§é™†å…¬å®‰ï¼šä¸­å…±é•‡åŽ‹æ³•è½®åŠŸæ—©æœ‰é¢„è°‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/8/n11708871.htm">è¢«æ›æ˜¯ä¹è§†ç½‘åŽå°è€æ¿ æŽæºæ½®æ›²çº¿è¾Ÿè°£ï¼Ÿ</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/8/n11708871.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
